# DxcResearch

./: .gitignore  CMakeLists.txt
research/: CMakeLists.txt
research/src/: effect.cpp  effect.h  main.cpp  pass.cpp  pass.h  test.h
shaders/: intersection.hlsl  transmittance.hlsl
